ui: fix details spacing and add upload information

--- a/invenio_rdm_records/theme/assets/semantic-ui/less/invenio_rdm_records/theme.less
+++ b/invenio_rdm_records/theme/assets/semantic-ui/less/invenio_rdm_records/theme.less
@@ -8,6 +8,16 @@
 
 @import "variables";
 
+// General
+
+.font-small {
+    font-size: @font-size-small
+}
+
+.top-bottom-padded {
+    margin: 15px 0px 20px 0px;
+}
+
 // Preview
 .iiif-preview-img {
     display: block;
@@ -71,10 +81,6 @@ dt {
 
 dd {
     margin-inline-start: 0px;
-}
-
-.span-dd {
-    margin: 15px 0px 20px 0px;
 }
 
 .ui.rdm-sidebar {
